--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "axios": "^1.6.8",
     "next": "14.1.4",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "toast": "^0.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
